feat: add section-template endpoints
